# Cosmic-Food-RAG-app

./: .env.example  .gitignore  .pre-commit-config.yaml  CBD_Mongo_vCore.ipynb  CONTRIBUTING.md  LICENSE  README.md  azure.yaml  pyproject.toml  rag-azure-openai-cosmosdb-langchain-notebook.ipynb
.devcontainer/: devcontainer.json  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/workflows/: azure-dev-templates-ci.yaml  azure-dev.yaml  devcontainer-ci.yaml  frontend-ci.yaml  python-lint-format.yaml  python-static-analysis.yaml  python-unit-test.yaml
docs/: alternative_openai_hosts.md  deploy_lowcost.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/api/: api.ts  models.ts
frontend/src/i18n/: tooltips.ts
infra/: main.bicep  main.parameters.json
infra/app/: key-vault-secrets.bicep
infra/core/ai/: ai-foundry.bicep  cognitiveservices.bicep
src/: entrypoint.sh  pyproject.toml  requirements.txt
src/data/: food_items.json
src/quartapp/: README.md  __init__.py  app.py  config.py  config_base.py
src/quartapp/approaches/: __init__.py  base.py  keyword.py  rag.py  schemas.py  setup.py  utils.py  vector.py
src/scripts/: add_data.py
tests/: README.md  conftest.py  e2e.py  test_app_additional.py  test_app_config.py  test_app_endpoints.py  test_approaches.py  test_config_additional.py  test_config_env_routing.py  test_playwright.py  test_rag_additional.py  test_schemas.py  test_schemas_additional.py  test_utilities.py  test_utils_additional.py
(+25 files in other folders)
