[project]
name = "quartapp"
version = "1.0.0"
description = "Demo Chat Application to demonstrate retrieval augmented generation using Azure Open AI, Azure Cosmos DB for MongoDB vCore, and lang chain."
dependencies = [
    "Quart",
    "python-dotenv",
    "Hypercorn",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "pymongo"
    ]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pip-tools",
    "pre-commit",
    "ruff",
    "black",
    "mypy",
    "mongomock",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
