[project]
name = "quartapp"
version = "1.0.0"
description = "Demo Chat Application to demonstrate retrieval augmented generation using Azure Open AI, Azure DocumentDB (with MongoDB compatibility), and lang chain."
requires-python = ">=3.10"
dependencies = [
    "Quart==0.20.0",
    "python-dotenv",
    "Hypercorn==0.18.0",
    "langchain==1.2.7",
    "langchain-openai==1.1.7",
    "langchain-community==0.4.1",
    "pymongo==4.16.0"
]

[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "mongomock",
]
lint = [
    "ruff",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
